--- a/_posts/2021-04-06-beyond-performance.html
+++ b/_posts/2021-04-06-beyond-performance.html
@@ -31,3 +31,36 @@ description: A blog post about the Ruby on Rails AHM with influxdb-rails
   </p>
 </div>
 
+<h2>Why build, not buy?</h2>
+<p>
+  But Henne, you say, there is already sentry, new relic, datadog, skylight and tons of other services that do this.
+  Why build another one? Why reinvent the wheel?
+</p>
+
+<div class="row">
+  <div class="col-sm-4">
+    <div class="img">
+      {% asset 'posts/bacteria.jpg' alt='A tire graveyard' class='img-responsive' %}
+      <p class="img-license text-right">
+        Colorized low-temperature electron micrograph of a cluster of E. coli bacteria
+        by <a href="https://www.flickr.com/photos/microbeworld/5981923914/in/album-72157625392265538/">Microbe World</a>
+      </p>
+    </div>
+  </div>
+  <div class="col-sm-8">
+    <p>
+      Because Free Software is an deeply evolutionary process. Free Software, just like Evolution, experiments all the time.
+      Many experiments find their niche to exist. Some even go global. Linux, the largest install base of ALL operating
+      systems on this planet. Wordpress powering an unbelievable 30% of the top 10 million websites. Mediawiki running the
+      5th most popular site globally. But also, more than 98% of all projects on GitHub are not seeing any development beyond the first year they
+  were created. Just like 99% of all species that ever lived on Earth are estimated to be extinct. 
+    </p>
+  </div>
+</div>
+
+<p>
+  We need to experiment and collaborate together. Evolution is what we do baby! 🤓
+  We can't collaborate with any of those services. Can't run, copy, distribute, study, change and improve
+  the software SaaS providers run. We can't scratch our itch, can't break it, learn how it works and make it
+  better together, that's why.
+</p>
