Apply suggestions from Dany
Co-authored-by: Dany Marcoux <dmarcoux@posteo.de>

--- a/_posts/2021-03-23-activesupport.html
+++ b/_posts/2021-03-23-activesupport.html
@@ -1,7 +1,7 @@
 ---
 image: possessed-photography-tiNCpHudGrw-unsplash.jpg
 image_license: Photo by Possessed Photography on <a href="https://unsplash.com/photos/tiNCpHudGrw">Unsplash</a>
-title: ActiveSupport::Notifications is rad!
+title: ActiveSupport::Notifications is Rad!
 description: A blog post about the Ruby on Rails instrumentation with ActiveSupport::Notifications
 ---
 
@@ -129,7 +129,7 @@ module ActionController
 end
 {% endhighlight %}
 
-<h2>ActiveSupport::Notifications is everywhere today</h2>
+<h2>Activesupport::Notifications Is Everywhere Today</h2>
 <p>
   Second, and you probably already guessed this from the example, what makes this most awesome are the ready made
   messages that are already published <b>today</b>.
@@ -163,7 +163,7 @@ end
 </p>
 <p>
   Now if the main work, publishing tons of messages through a pub-sub architecture, is already done by Rails, surely there are
-  non SaaS (a.k.a. Free Software) options to display this data right? Turns out there aren't really. While evaluating A*M for some
+  non-SaaS (a.k.a. Free Software) options to display this data, right? Turns out there aren't really. While evaluating A*M for some
   of my projects (especially Open Build Service) we came across this gap and started to fill it.
 </p>
 <p>
