Some minor corrections

--- a/_posts/2021-03-23-activesupport.html
+++ b/_posts/2021-03-23-activesupport.html
@@ -33,10 +33,10 @@ description: A blog post about the Ruby on Rails instrumentation with ActiveSupp
         ActiveSupport::Notifications is rad! 💘 (this post)
       </li>
       <li>
-        <a href="/blog/influxdb-rails.html">Measure twice, instrument once with influxdb-rails!</a>
+        <a href="/blog/influxdb-rails.html">Measure twice, cut once: Application Performance Monitoring</a>
       </li>
       <li>
-        <a href="/blog/beyond-performance.html">influxdb-rails instrumentation beyond performance.</a>
+        <a href="/blog/beyond-performance.html">Beyond Performance with influxdb-rails</a>
       </li>
     </ul>
   </p>
@@ -168,5 +168,6 @@ end
 </p>
 <p>
   How, why and in what way can you contribute? Read on in the next part of this series: 
-  <a href="/blog/influxdb-rails.html">Measure twice, instrument once with influxdb-rails!</a>
+  <a href="/blog/influxdb-rails.html">Measure twice, cut once: Application Performance Monitoring</a>
 </p>
+
