--- a/_posts/2021-04-06-beyond-performance.html
+++ b/_posts/2021-04-06-beyond-performance.html
@@ -22,7 +22,7 @@ description: A blog post about the Ruby on Rails AHM with influxdb-rails
         <a href="/blog/activesupport.html">ActiveSupport::Notifications is rad! 💘</a>
       </li>
       <li>
-        <a href="/blog/influxdb-rails.html">Measure twice, instrument once with influxdb-rails!</a>
+        <a href="/blog/influxdb-rails.html">Measure twice, cut once: Application Performance Monitoring</a>
       </li>
       <li>
         Beyond Performance with influxdb-rails (this post)
