Last post in the series...

--- a/_posts/2021-03-23-activesupport.html
+++ b/_posts/2021-03-23-activesupport.html
@@ -2,7 +2,7 @@
 image: possessed-photography-tiNCpHudGrw-unsplash.jpg
 image_license: Photo by Possessed Photography on <a href="https://unsplash.com/photos/tiNCpHudGrw">Unsplash</a>
 title: ActiveSupport::Notifications is Rad!
-description: A blog post about the Ruby on Rails instrumentation with ActiveSupport::Notifications
+description: A blog post about Ruby on Rails instrumentation with ActiveSupport::Notifications
 ---
 
 <p>
@@ -25,18 +25,18 @@ description: A blog post about the Ruby on Rails instrumentation with ActiveSupp
 <div class="alert alert-warning">
   <p>
     <small>
-      This post ist part one of a three part series about instrumenting your Ruby on Rails app with Active Support Instrumentation
-      and influxdb-rails. Make sure to check them all out!
+      This post is the first part of a three part series about instrumenting your Ruby on Rails app with influxdb-rails.
+      Make sure to check them all out!
     </small>
     <ul>
       <li>
         ActiveSupport::Notifications is rad! 💘 (this post)
       </li>
       <li>
-        <a href="/blog/influxdb-rails.html">Measure twice, cut once: Application Performance Monitoring</a>
+        <a href="/blog/influxdb-rails.html">Measure twice, cut once: App Performance Monitoring with influxdb-rails</a>
       </li>
       <li>
-        <a href="/blog/beyond-performance.html">Beyond Performance with influxdb-rails</a>
+        <a href="/blog/beyond-performance.html">Let's build Software Libre APM together</a>
       </li>
     </ul>
   </p>
@@ -167,7 +167,7 @@ end
   of my projects (especially Open Build Service) we came across this gap and started to fill it.
 </p>
 <p>
-  How, why and in what way can you contribute? Read on in the next part of this series: 
-  <a href="/blog/influxdb-rails.html">Measure twice, cut once: Application Performance Monitoring</a>
+  How, why and where? Read on in the next part of this series: 
+  <a href="/blog/influxdb-rails.html">Measure twice, cut once: App Performance Monitoring with influxdb-rails</a>
 </p>
 
