--- a/_posts/2021-03-26-apm-but-together.html
+++ b/_posts/2021-03-26-apm-but-together.html
@@ -2,7 +2,7 @@
 image: nasa-wAkLQnT2TC0-unsplash.jpg
 image_license: Photo by NASA on <a href="https://unsplash.com/photos/wAkLQnT2TC0">Unsplash</a>
 title: Let's build Software Libre APM together
-description: A blog post about Application Monitoring with influxdb-rails
+description: An introduction to Rails Application Monitoring and call to action to collaborate 
 ---
 
 <p>
@@ -22,24 +22,20 @@ description: A blog post about Application Monitoring with influxdb-rails
 <div id="more"></div>
 
 <div class="alert alert-warning">
-  <p>
-    <small>
-      This post is the last part of a three part series about monitoring your Ruby on Rails app with influxdb-rails.
-      Make sure to check them all out!
-    </small>
-    <ul>
-      <li>
-        <a href="/blog/activesupport.html">ActiveSupport::Notifications is rad! 💘</a>
-      </li>
-      <li>
-        <a href="/blog/influxdb-rails.html">Measure twice, cut once: App Performance Monitoring with influxdb-rails</a>
-      </li>
-      <li>
-        Let's build Software Libre APM together (this post)
-      </li>
-    </ul>
-  </p>
-</div>
+  This post is the last part of a three part series about monitoring your Ruby on Rails app with influxdb-rails.
+  Make sure to check them all out!
+  <ul>
+    <li>
+      <a href="/blog/activesupport.html">ActiveSupport::Notifications is rad! 💘</a>
+    </li>
+    <li>
+      <a href="/blog/influxdb-rails.html">Measure twice, cut once: App Performance Monitoring with influxdb-rails</a>
+    </li>
+    <li>
+      Let's build Software Libre APM together (this post)
+    </li>
+  </ul>
+ </div>
 
 <h2>The Ying and Yang of measurements</h2>
 <p>
