--- a/_posts/2021-03-25-influxdb-rails.html
+++ b/_posts/2021-03-25-influxdb-rails.html
@@ -15,23 +15,19 @@ description: A blog post about App Performance Monitoring with influxdb-rails
 <div id="more"></div>
 
 <div class="alert alert-warning">
-  <p>
-    <small>
-      This post ist part two of a three part series about monitoring your Ruby on Rails app with influxdb-rails.
-      Make sure to check them all out!
-    </small>
-    <ul>
-      <li>
-        <a href="/blog/activesupport.html">ActiveSupport::Notifications is rad! 💘</a>
-      </li>
-      <li>
-        Measure twice, cut once: App Performance Monitoring with influxdb-rails (this post)
-      </li>
-      <li>
-        <a href="/blog/beyond-performance.html">Let's build Software Libre APM together</a>
-      </li>
-    </ul>
-  </p>
+  This post ist part two of a three part series about monitoring your Ruby on Rails app with influxdb-rails.
+  Make sure to check them all out!
+  <ul>
+    <li>
+      <a href="/blog/activesupport.html">ActiveSupport::Notifications is rad! 💘</a>
+    </li>
+    <li>
+      Measure twice, cut once: App Performance Monitoring with influxdb-rails (this post)
+    </li>
+    <li>
+      <a href="/blog/apm-but-together.html">Let's build Software Libre APM together</a>
+    </li>
+  </ul>
 </div>
 
 <h2>Application Performance Monitoring (APM)</h2>
@@ -195,5 +191,5 @@ Completed 200 OK in 5ms (Views: 4.1ms | ActiveRecord: 0.1ms | Allocations: 3514)
 
 <p>
   Play a little, I will tell you about all the nitty gritty details in the last post of this series:
-  <a href="/blog/beyond-performance.html">Let's build Software Libre APM together</a>
+  <a href="/blog/apm-but-together.html">Let's build Software Libre APM together</a>
 </p>
