--- a/_posts/2021-03-25-influxdb-rails.html
+++ b/_posts/2021-03-25-influxdb-rails.html
@@ -8,8 +8,7 @@ description: A blog post about App Performance Monitoring with influxdb-rails
 <p>
   Now that we learned how truly magnificent <code>ActiveSupport::Notifications</code> is in the previous post,
   let's explore a RubyGem <a href="https://bruckmayer.net/">Chris</a>, others and me have built around this: influxdb-rails.
-  Together with some more awesome Free Software, it will help you to deep dive into and understand your Ruby on Rails
-  application performance.
+  Together with even more awesome Software Libre, it will help you to deep dive into your Ruby on Rails application performance.
 </p>
 
 <div id="more"></div>
@@ -55,15 +54,14 @@ description: A blog post about App Performance Monitoring with influxdb-rails
   The good folks at <a href="https://contributors.rubyonrails.org/">Rails</a> bring the instrumentation framework.
   <a href="https://www.influxdata.com/about/">InfluxData</a> deliver a time series database.
   <a href="https://grafana.com/about/team/">Grafana Labs</a> make a dashboard builder. All we need to do, as so often,
-  is to plug Free Software together: SUCCESS!
+  is to plug Software Libre together: SUCCE$$!
 </p>
 
 <h3>InfluxDB + Grafana == <span title='Da Bomb!'>🧨</span></h3>
 
 <p>
   I assume your Rails development environment is already running on 127.0.0.0:300. Getting InfluxDB and Grafana is a matter
-  of pulling containers these days. You can use this simple <code>docker-compose</code> configuration for running them locally
-  too.
+  of pulling containers these days. You can use this simple <code>docker-compose</code> configuration for running them locally.
 </p>
 
 {% highlight yaml %}
@@ -115,9 +113,7 @@ Password: grafana
 </p>
 
 {% highlight shell %}
-bundler add influxdb-rails
-```
-bundle install
+bundle add influxdb-rails
 bundle exec rails generate influxdb
 {% endhighlight %}
 
@@ -173,10 +169,10 @@ Completed 200 OK in 5ms (Views: 4.1ms | ActiveRecord: 0.1ms | Allocations: 3514)
 
 <h3>Ruby on Rails Dashboards</h3>
 <p>
-  We, the Free Software community, are in this together! We collaborate on Ruby on Rails. We work together to make the
+  We, the Free Software community, are in this together! We collaborate on Ruby on Rails. We work together to make
   InfluxDB better. We cooperate to improve Grafana. Why not do the same for the dashboards to visualize Rails performance data?
-  Let's collaborate! That is why we have build a couple of dashboards you can <a href="http://127.0.0.0:4000/dashboard/import">import</a>
-  into your Grafana. Just copy and paste the URLs...
+  Let's collaborate! That is why we have build a couple of dashboards you can <a href="http://127.0.0.0:4000/dashboard/import">import</a>.
+  Just copy and paste the URLs into your Grafana.
   <ul>
     <li>Ruby On Rails Performance Overview: <a href="https://grafana.com/grafana/dashboards/10428/" rel="nofollow">Ruby On Rails Performance Overview</a></li>
     <li>Performance insights into individual requests: <a href="https://grafana.com/grafana/dashboards/10429" rel="nofollow">Ruby On Rails Performance per Request</a></li>
