--- a/_posts/2021-03-26-apm-but-together.html
+++ b/_posts/2021-03-26-apm-but-together.html
@@ -49,7 +49,7 @@ description: An introduction to Rails Application Monitoring and call to action 
 </div>
 
 <p>
-  We also look at the time your application spends doing that.
+  We also look at the time your application spends on doing that.
 </p>
 
 <div class="img">
@@ -102,9 +102,13 @@ description: An introduction to Rails Application Monitoring and call to action 
 </div>
 
 <p>
-  A form of grouping is to visualize all measurements connected to a specific event, like a single request. Or all the
+  A different form of grouping is to visualize all measurements connected to a specific event, like a single request. Or all the
   measurements a specific controller action has fired in the last hour.
 </p>
+
+<div class="img">
+  {% asset 'posts/grafana-grouping_by_request.png' alt='A Grafana Panel plotting requests per second' class='img-responsive img-center' %}
+</div>
 
 <h3>Rankings</h3>
 <p>
@@ -118,41 +122,37 @@ description: An introduction to Rails Application Monitoring and call to action 
 
 <h2>Apply your knowledge, let's collaborate on Rails APM/AHM</h2>
 <p>
-  Maybe I inspired some ideas for you in 101 above? I'm also sure there are many people out in the Rails community that
+  Maybe I inspired some ideas for features in the 101 above? I'm also sure there are many people out in the Rails community that
   have way more knowledge and ideas about statistics, measurements and all the tools involved than Chris and me. Let's
   work together, patches to the collection of dashboards (and the Ruby code) are more than welcome!
 </p>
 
 <h3>Why build, not buy?</h3>
 <p>
-  But Henne, you say, there is already sentry, new relic, datadog, skylight and tons of other services that do this.
+  But Henne, you say, there is already Sentry, New Relic, Datadog, Skylight and tons of other services that do this.
   Why build another one? Why reinvent the wheel?
 </p>
 
-<div class="row">
-  <div class="col-sm-4">
-    <div class="img">
-      {% asset 'posts/bacteria.jpg' alt='A tire graveyard' class='img-responsive' %}
-      <p class="img-license text-right">
-        Colorized low-temperature electron micrograph of a cluster of E. coli bacteria
-        by <a href="https://www.flickr.com/photos/microbeworld/5981923914/in/album-72157625392265538/">Microbe World</a>
-      </p>
-    </div>
-  </div>
-  <div class="col-sm-8">
-    <p>
-      Because Free Software is an deeply evolutionary process. Free Software, just like Evolution, experiments all the time.
-      Many experiments find their niche to exist. Some even go global. Linux, the largest install base of ALL operating
-      systems on this planet. Wordpress powering an unbelievable 30% of the top 10 million websites. Mediawiki running the
-      5th most popular site globally. But also, more than 98% of all projects on GitHub are not seeing any development beyond the first year they
-  were created. Just like 99% of all species that ever lived on Earth are estimated to be extinct. 
-    </p>
-  </div>
+<p>
+   Because Software Libre is an deeply evolutionary process. Software Libre, just like Evolution, experiments all the time.
+   Many experiments find their niche to exist. Some even go global.
+</p>
+<div class="img">
+ {% asset 'posts/corona.jpg' alt='A tire graveyard' class='img-responsive' %}
+ <p class="img-license text-right">
+   Coronavirus: BW CG Illustration
+   by <a href="https://www.flickr.com/photos/yusamoilov/49678500083">Yuri Samoilov</a>
+ </p>
 </div>
+<p>  
+   Like Linux, the largest install base of ALL operating systems on this planet. Wordpress powering an unbelievable 30% of
+   the top 10 million websites. Mediawiki running the 5th most popular site globally. But also, more than 98% of all projects
+   on GitHub are not seeing any development beyond the first year they were created. Just like 99% of all species that ever
+   lived on Earth are estimated to be extinct.
+</p>
 
 <p>
   We need to experiment and collaborate together. Evolution is what we do baby! 🤓
-  We can't collaborate with any of those services. Can't run, copy, distribute, study, change and improve
-  the software SaaS providers run. We can't scratch our itch, can't break it, learn how it works and make it
-  better together, that's why.
+  Can't run, copy, distribute, study, change and improve the software SaaS providers run. We can't scratch our itch,
+  can't break it, learn how it works and make it better together, that's why. Let's do this!
 </p>
