--- a/_posts/2021-03-26-apm-but-together.html
+++ b/_posts/2021-03-26-apm-but-together.html
@@ -112,8 +112,8 @@ description: An introduction to Rails Application Monitoring and call to action 
 
 <h3>Rankings</h3>
 <p>
-  Another thing we do on the dashboard is ranking (groups of) events by time, slow to fast. So you now what you might want to
-  concentrate your efforts to improve performance on.
+  Another thing we do on the dashboard is ranking (groups of) events by time, slow to fast. So you know where you might want to
+  concentrate your efforts to improve performance.
 </p>
 
 <div class="img">
@@ -122,7 +122,7 @@ description: An introduction to Rails Application Monitoring and call to action 
 
 <h2>Apply your knowledge, let's collaborate on Rails APM/AHM</h2>
 <p>
-  Maybe I inspired some ideas for features in the 101 above? I'm also sure there are many people out in the Rails community that
+  Maybe I inspired some ideas for new features in the 101 above? I'm also sure there are many people out in the Rails community that
   have way more knowledge and ideas about statistics, measurements and all the tools involved than Chris and me. Let's
   work together, patches to the collection of dashboards (and the Ruby code) are more than welcome!
 </p>
